Se corrigio los cambios del about

--- a/about.html
+++ b/about.html
@@ -74,102 +74,47 @@
 							</div>
 
 							<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
-								<ul class="navigation clearfix">
-                                    <li class="dropdown"><a href="#">Home</a>
+                                <ul class="navigation clearfix">
+                                    <li class="dropdown"><a href="index.html">Home</a>
                                         <ul>
-                                            <li><a href="index.html">Homepage One</a></li>
-                                            <li><a href="index-2.html">Homepage Two</a></li>
-                                            <li><a href="index-3.html">Homepage Three</a></li>
-											<li><a href="index-4.html">Homepage Four</a></li>
-                                            <li class="dropdown"><a href="#">Header Styles</a>
-                                                <ul>
-                                                    <li><a href="index.html">Header Style One</a></li>
-                                                    <li><a href="index-2.html">Header Style Two</a></li>
-                                                    <li><a href="index-3.html">Header Style Three</a></li>
-													<li><a href="index-4.html">Header Style Four</a></li>
-                                                </ul>
-                                            </li>
+                                            <li><a href="index.html">Inicio</a></li>
                                         </ul>
                                     </li>
-                                    <li class="current dropdown"><a href="#">Nosotros</a>
+                                    <li class="dropdown"><a href="about.html">About</a>
                                         <ul>
                                             <li><a href="about.html">Nosotros</a></li>
-                                            <li><a href="appointment.html">Appointment</a></li>
-                                            <li><a href="team.html">Team</a></li>
-                                            <li><a href="price.html">Price</a></li>
-                                            <li><a href="coming-soon.html">Coming Soon</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown"><a href="#">Projectos</a>
+                                    <li class="dropdown"><a href="locales.html">Locals</a>
                                         <ul>
-                                            <li><a href="project.html">Projecto</a></li>
-                                            <li><a href="project-detail.html">Projecto Detail</a></li>
+                                            <li><a href="locales.html">Locales</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown"><a href="#">Servicios</a>
+                                    <li class="dropdown"><a href="servicios.html">Services</a>
                                         <ul>
-                                            <li><a href="services.html">Servicios 01</a></li>
-                                            <li><a href="services-2.html">Servicios 02</a></li>
-                                            <li><a href="service-detail.html">Servicios Single</a></li>
+                                            <li><a href="servicios.html">Servicios</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown has-mega-menu"><a href="#">Paginas</a>
-                                        <div class="mega-menu">
-                                            <div class="mega-menu-bar row clearfix">
-                                                <div class="column col-md-4 col-sm-4 col-xs-12">
-                                                    <h3>Sobre nosotros</h3>
-                                                    <ul>
-                                                        <li><a href="team.html">Equipo</a></li>
-                                                        <li><a href="team-single.html">Equipo Single</a></li>
-                                                        <li><a href="testimonials.html">Testimonios</a></li>
-                                                        <li><a href="faq.html">FAQ's</a></li>
-                                                        <li><a href="coming-soon.html">Coming Soon</a></li>
-                                                    </ul>
-                                                </div>
-                                                <div class="column col-md-4 col-sm-4 col-xs-12">
-                                                    <h3>Soluciones</h3>
-                                                    <ul>
-                                                        <li><a href="service-detail.html">Soluciones</a></li>
-                                                        <li><a href="service-detail.html">Chemical Engineering</a></li>
-                                                        <li><a href="service-detail.html">Energy & Power Engineering</a></li>
-                                                        <li><a href="service-detail.html">Oil & Gas Engineering</a></li>
-                                                        <li><a href="service-detail.html">Civil Engineering</a></li>
-                                                    </ul>
-                                                </div>
-                                                <div class="column col-md-4 col-sm-4 col-xs-12">
-                                                    <h3>Blog</h3>
-                                                    <ul>
-                                                        <li><a href="blog.html">Our Blog</a></li>
-                                                        <li><a href="blog-classic.html">Blog Classic</a></li>
-                                                        <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
-                                                        <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
-                                                        <li><a href="blog-detail.html">Blog Details</a></li>
-                                                    </ul>
-                                                </div>
-
-                                            </div>
-                                        </div>
-                                    </li>
-                                    
                                     <li><a href="contact.html">Contacto</a></li>
                                 </ul>
                             </div>
+    
 
                         </nav>
                         <!-- Main Menu End-->
 
                         <!--outer Box-->
-                        <div class="outer-box">
+                        <!-- <div class="outer-box">
                             <!-- Cart Btn -->
-                            <div class="cart-btn">
+                            <!-- <div class="cart-btn">
                                 <a href="shop.html" title="">
                                     <i class="flaticon-shopping-bag-1"></i>
                                     <span class="count">2</span>
                                 </a>
-                            </div>
+                            </div> -->
 
                             <!--Search Box-->
-                            <div class="dropdown dropdown-outer">
+                            <!-- <div class="dropdown dropdown-outer">
                                 <button class="search-box-btn dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="fa fa-search"></span></button>
                                 <ul class="dropdown-menu pull-right search-panel" aria-labelledby="dropdownMenu3">
                                     <li class="panel-outer">
@@ -184,7 +129,7 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div><!--End outer Box-->
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -211,114 +156,30 @@
 							</button>
                         </div>
 
-                        <div class="navbar-collapse collapse clearfix" id="navbarSupportedContent1">
-                            <ul class="navigation clearfix">
-                                <li class="dropdown"><a href="#">Home</a>
-                                        <ul>
-                                            <li><a href="index.html">Homepage One</a></li>
-                                            <li><a href="index-2.html">Homepage Two</a></li>
-                                            <li><a href="index-3.html">Homepage Three</a></li>
-											<li><a href="index-4.html">Homepage Four</a></li>
-                                            <li class="dropdown"><a href="#">Header Styles</a>
-                                                <ul>
-                                                    <li><a href="index.html">Header Style One</a></li>
-                                                    <li><a href="index-2.html">Header Style Two</a></li>
-                                                    <li><a href="index-3.html">Header Style Three</a></li>
-													<li><a href="index-4.html">Header Style Four</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                <li class="current dropdown"><a href="#">Nosotros</a>
-                                    <ul>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="appointment.html">Appointment</a></li>
-                                        <li><a href="team.html">Team</a></li>
-                                        <li><a href="price.html">Price</a></li>
-                                        <li><a href="coming-soon.html">Coming Soon</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown"><a href="#">Projectos</a>
-                                    <ul>
-                                        <li><a href="project.html">Project</a></li>
-                                        <li><a href="project-detail.html">Project Detail</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown"><a href="#">Servicios</a>
-                                    <ul>
-                                        <li><a href="services.html">Services 01</a></li>
-                                        <li><a href="services-2.html">Services 02</a></li>
-                                        <li><a href="service-detail.html">Services Single</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown has-mega-menu"><a href="#">Paginas</a>
-                                    <div class="mega-menu">
-                                        <div class="mega-menu-bar row clearfix">
-                                            <div class="column col-md-3 col-sm-3 col-xs-12">
-                                                <h3>Sobre Nosotros</h3>
-                                                <ul>
-                                                    <li><a href="team.html">Team</a></li>
-                                                    <li><a href="team-single.html">Team Single</a></li>
-                                                    <li><a href="testimonials.html">Testimonial</a></li>
-                                                    <li><a href="faq.html">FAQ's</a></li>
-                                                    <li><a href="coming-soon.html">Coming Soon</a></li>
-                                                </ul>
-                                            </div>
-                                            <div class="column col-md-3 col-sm-3 col-xs-12">
-                                                <h3>Soluciones</h3>
-                                                <ul>
-                                                    <li><a href="service-detail.html">Solutions</a></li>
-                                                    <li><a href="service-detail.html">Chemical Engineering</a></li>
-                                                    <li><a href="service-detail.html">Energy & Power Engineering</a></li>
-                                                    <li><a href="service-detail.html">Oil & Gas Engineering</a></li>
-                                                    <li><a href="service-detail.html">Civil Engineering</a></li>
-                                                </ul>
-                                            </div>
-                                            <div class="column col-md-3 col-sm-3 col-xs-12">
-                                                <h3>Blog</h3>
-                                                <ul>
-                                                    <li><a href="blog.html">Our Blog</a></li>
-                                                    <li><a href="blog-classic.html">Blog Classic</a></li>
-                                                    <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
-                                                    <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
-                                                    <li><a href="blog-detail.html">Blog Details</a></li>
-                                                </ul>
-                                            </div>
-
-                                            <div class="column col-md-3 col-sm-3 col-xs-12">
-                                                <h3>Tienda</h3>
-                                                <ul>
-                                                    <li><a href="shop.html">Shop</a></li>
-                                                    <li><a href="shop-single.html">Product Details</a></li>
-                                                    <li><a href="shoping-cart.html">Cart Page</a></li>
-                                                    <li><a href="checkout.html">Checkout Page</a></li>
-                                                    <li><a href="login.html">Registration Page</a></li>
-                                                </ul>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="dropdown"><a href="#">Nuevos</a>
-                                    <ul>
-                                        <li><a href="blog.html">News</a></li>
-                                        <li><a href="blog-detail.html">News Detail</a></li>
-                                        <li><a href="error-page.html">Error Page</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown"><a href="#">Tienda</a>
-                                    <ul>
-                                        <li><a href="shop.html">Products</a></li>
-                                        <li><a href="shop-single.html">Products Detail</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
-                                        <li><a href="cart.html">Shopping Cart</a></li>
-                                        <li><a href="login.html">Registration</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="contact.html">Contacto</a></li>
+                <div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
+                    <ul class="navigation clearfix">
+                        <li class="dropdown"><a href="index.html">Home</a>
+                            <ul>
+                                <li><a href="index.html">Inicio</a></li>
                             </ul>
-                        </div>
-                    </nav><!-- Main Menu End-->
+                        </li>
+                        <li class="dropdown"><a href="about.html">About</a>
+                            <ul>
+                                <li><a href="about.html">Nosotros</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown"><a href="locales.html">Locals</a>
+                            <ul>
+                                <li><a href="locales.html">Locales</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown"><a href="servicios.html">Services</a>
+                            <ul>
+                                <li><a href="servicios.html">Servicios</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="contact.html">Contacto</a></li>
+                    </ul>
                 </div>
 
             </div>
