--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Motor Expert - Auto Repair & Service HTML Template | Home Page One</title>
+<title>Service Auto - Servicio de Reparación y Mantenimiento | Agenda tu cita</title>
 
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
