--- a/about.html
+++ b/about.html
@@ -394,74 +394,76 @@
     <!--End Clients Section-->
 
       <!-- Footer Style Two -->
-      <footer class="footer-style-two " style="width: 100%;" >
-        <div class="auto-container">
+ <!-- Footer Style Two -->
+ <footer class="footer-style-two" style="width: 100%;" >
+    <div class="auto-container">
 
-            <!--Widgets Section-->
-            <div class="widgets-section">
-                <div class="row clearfix">
+        <!--Widgets Section-->
+        <div class="widgets-section">
+            <div class="row clearfix">
 
-                    <!--Footer Column-->
-                    <div class="footer-column col-lg-4 col-md-6 col-sm-12">
-                        <div class="footer-widget info-widget">
-                            <div class="widget-content">
-                                <h2>Contactanos</h2>
-                                <div class="text"></div>
-                                <ul class="info-list">
-                                    <li><span>Dirección: </span>Av. Nicolas Ayllón #2648 - Ate</li>
-                                    <li><span>Teléfono: </span>01 7802020</li>
-                                    <li><span>E-mail: </span> taller@motorexpert.com</li>
-                                </ul>
-                            </div>
+                <!--Footer Column-->
+                <div class="footer-column col-lg-4 col-md-6 col-sm-12">
+                    <div class="footer-widget info-widget">
+                        <div class="widget-content">
+                            <h2>Contactanos</h2>
+                            <div class="text"></div>
+                            <ul class="info-list">
+                                <li><span>Dirección: </span>Av. Nicolas Ayllón #2648 - Ate</li>
+                                <li><span>Teléfono: </span>01 7802020</li>
+                                <li><span>E-mail: </span> taller@motorexpert.com</li>
+                            </ul>
                         </div>
                     </div>
-
-                    <!--Footer Column-->
-                    <div class="footer-column col-lg-4 col-md-6 col-sm-12">
-                        <div class="footer-widget about-widget">
-                            <div class="widget-content">
-                                <h2>Síguenos</h2>
-                                <div class="text">Visíta nuestras redes sociales.</div>
-                                <ul class="social-icon">
-                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!--Footer Column-->
-                    <div class="footer-column col-lg-4 col-md-6 col-sm-12">
-                        <div class="footer-widget info-widget">
-                            <div class="widget-content">
-                                <h2>Horarios de Atención</h2>
-                                <div class="text"></div>
-                                <ul class="info-list">
-                                    <li>Lunes a Viernes: 08:00 a.m. – 12:30 p.m. / 02:15 p.m. – 05:30 p.m.</li>
-                                    <li>Sábado: 08:00 a.m. – 12:00 p.m.</li>
-                                    <li>Domingos y feriados: Cerrado</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
-            </div>
 
+                <!--Footer Column-->
+                <div class="footer-column col-lg-4 col-md-6 col-sm-12">
+                    <div class="footer-widget about-widget">
+                        <div class="widget-content">
+                            <h2>Síguenos</h2>
+                            <div class="text">Visíta nuestras redes sociales.</div>
+                            <ul class="social-icon">
+                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                                <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
+                                <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!--Footer Column-->
+                <div class="footer-column col-lg-4 col-md-6 col-sm-12">
+                    <div class="footer-widget info-widget">
+                        <div class="widget-content">
+                            <h2>Horarios de Atención</h2>
+                            <div class="text"></div>
+                            <ul class="info-list">
+                                <li>Lunes a Viernes: 08:00 a.m. – 12:30 p.m. / 02:15 p.m. – 05:30 p.m.</li>
+                                <li>Sábado: 08:00 a.m. – 12:00 p.m.</li>
+                                <li>Domingos y feriados: Cerrado</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
 
-        <!-- Footer Bottom -->
-        <div class="footer-bottom">
-            <div class="auto-container">
-                <div class="copyright">Copyright &copy; 2021 Todos los Derechos Reservados. Desarrollado por codiGO</div>
-            </div>
-        </div>
+    </div>
 
-    </footer>
-    <!-- End Footer Style Two -->
+    <!-- Footer Bottom -->
+    <div class="footer-bottom">
+        <div class="auto-container">
+            <div class="copyright">Copyright &copy; 2021 Todos los Derechos Reservados. Desarrollado por codiGO</div>
+        </div>
+    </div>
+
+</footer>
+<!-- End Footer Style Two -->
+
 
 </div>
 <!--End pagewrapper-->
