se corrigieron cambios

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <header class="main-header header-style-four">
 
         <!--Header Top-->
-    	<div class="header-top">
+    	<!-- <div class="header-top">
         	<div class="auto-container">
             	<div class="inner-container clearfix">
                     <div class="top-left">
@@ -51,7 +51,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- End Header Top -->
 
         <!-- Header Lower -->
@@ -189,7 +189,7 @@
     <!--End Main Header -->
 
     <!--Page Title-->
-    <section  class="page-title wow fadeInUp " style="background-image:url(images/greasy-mechanic-hand-reaches-under-hood-free-photo.webp);background-attachment: center;">
+    <section  class="page-title wow fadeInUp " style="background-image:url(images/background/8.jpg);">
         <div class="auto-container">
             <div class="inner-container clearfix">
                 <h1>SOBRE NOSOTROS</h1>
