--- a/servicios.html
+++ b/servicios.html
@@ -36,7 +36,7 @@
     <header class="main-header header-style-four">
 
         <!--Header Top-->
-    	<div class="header-top">
+    	<!-- <div class="header-top">
         	<div class="auto-container">
             	<div class="inner-container clearfix">
                     <div class="top-left">
@@ -50,7 +50,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- End Header Top -->
 
         <!-- Header Lower -->
@@ -297,10 +297,10 @@
             <!-- Styled Pagination -->
             <div class="styled-pagination text-center clearfix">
                 <ul class="clearfix">
-                    <li><a href="#" class="active">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
+                    <li><a href="" class="active">1</a></li>
+                    <li><a href="">2</a></li>
+                    <li><a href="">3</a></li>
+                    <li><a href="">4</a></li>
                     <li><a class="next" href="#"><span class="fa fa-angle-right"></span></a></li>
                 </ul>
             </div>
